ags (2.0.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added fixed 32/64 bit issues in ags_recycling_context.c

ags (2.0.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSpectrometer and AgsEqualizer10 missing recall factory effects
	* fixed possible infinite loop in ags_recycling_context.c
	* fixed possible floating point exception in ags_synth_generator.c
	* completed ags_recycling_context_test.c
	* renamed ags_functional_editor_workflow_test.c to ags_functional_notation_editor_workflow_test.c
	* added ags_functional_automation_editor_workflow_test.c
	* added ags_synth_generator_test.c
	* added ags_analyse_audio_signal_test.c

ags (2.0.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented missing properties AgsAudio:min-audio-channels, AgsAudio:min-output-pads and AgsAudio:min-input-pads
	* fixed ags_recycling_context_remove() potential memory corruption
	* populated ags_audio_buffer_util_test.c
	* added ags_char_buffer_util_test.c skelleton
	* added ags_devin_test.c
	* added ags_fifoout_test.c
	* added ags_midi_test.c
	* added ags_track_test.c
	* added ags_recall_id_test.c
	* added ags_recycling_context_test.c

ags (2.0.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed compiler error

ags (2.0.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_buffer_test_duplicate() to pass on x86 systems

ags (2.0.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong types in ags_buffer.c
	* fixed wrong types in ags_jack_client.c
	* populated partially ags_audio_buffer_util_test.c

ags (2.0.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_ladspa_browser_callbacks.c to obtain GtkComboBox model
	* fixed missing property AgsLadspaConversion:samplerate
	* fixed prototypes in ags_synth_util.h
	* added ags_buffer_util_test.c
	* added ags_ladspa_conversion_test.c
	* added ags_lv2_conversion_test.c